--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,6 @@
     "express": "^4.17.1",
     "geoip-lite": "^1.4.2",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.7",
     "public-ip": "^4.0.3"
   }
 }
