--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mocha": "^8.2.1",
     "node-fetch": "^2.6.1",
     "public-ip": "^4.0.3",
+    "should": "^13.2.3",
     "supertest": "^6.1.1"
   }
 }
